# MeshReduce

./: CMakeLists.txt  README.md  config.json
app/: CMakeLists.txt  kinect_streamer.cpp  sensor_client.cpp
include/: data_type.hpp  pipe.hpp  util.hpp
include/reconstruction/: reconstruction.hpp  texture_mapping.hpp
include/sensor/: cv_convert_util.hpp  kinect_cameras.hpp  kinect_capture.hpp
include/streaming/: network_stream.hpp  send_image.hpp  sender_to_unity.hpp
src/: CMakeLists.txt  util.cpp
src/reconstruction/: CMakeLists.txt  reconstruction.cpp  texture_mapping.cpp
src/sensor/: CMakeLists.txt  kinect_cameras.cpp  kinect_capture.cpp
src/streaming/: CMakeLists.txt  network_stream.cpp  send_image.cpp  sender_to_unity.cpp
